--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ body {
     box-shadow: 0 2vw 4vw -1vw rgba(0, 0, 0, 0.8);
 }
 
-.clock-container .clock .dial-lines {
+.clock-container .clock .dial-dots .dial-dot {
     top: 0.5%;
     left: 48.5%;
     position: absolute;
@@ -63,7 +63,7 @@ body {
     transform-origin: 50% 1650%;
 }
 
-.clock-container .clock .dial-lines:nth-child(5n+1) {
+.clock-container .clock .dial-dots .dial-dot:nth-child(5n+1) {
     top: 0.5%;
     border-radius: 0;
     z-index: 2;
@@ -74,7 +74,7 @@ body {
     border-radius: 15em 15em 15em 15em;
 }
 
-.clock-container .clock .hands .hour-hand {
+.clock-container .clock .clock-hands .hour-hand {
     position: absolute;
     z-index: 5;
     width: 2%;
@@ -87,7 +87,7 @@ body {
     transition: all 1s;
 }
     
-.clock-container .clock .hands .minute-hand {
+.clock-container .clock .clock-hands .minute-hand {
     position: absolute;
     z-index: 6;
     width: 1.5%;
