--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,8 +11,9 @@
 	}
 	
 	.game-container .info-box-container h1 {
-		font-size: 2.2em;
+		font-size: 2.1em;
 		letter-spacing: 2px;
+		padding-top: 2px;
 	}
 
 	.game-container .answer-buttons .answer-row .button,
